--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </ul>
 
             <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
-            <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+            <li class="opções__item"><a href="#" class="opções__link"></a></li>
         </ul>
 
         <div class="container">
@@ -82,7 +82,7 @@
                     class="container__imagem container__imagem-transparente"></a>
             <a href="#" class="container__link">
                 <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
-                <p class="container__texto">Minha sacola</p>
+                <p class="container__texto">Minha lista</p>
             </a>
             <a href="#" class="container__link">
                 <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
@@ -91,12 +91,12 @@
         </div>
     </header>
     <section class="banner">
-        <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-        <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+        <h2 class="banner__titulo">Aproveite a Netflix!</h2>
+        <p class="banner__texto"></p>
+        <input type="search" class="banner__pesquisa" placeholder=>
     </section>
     <section class="carrossel">
-        <h2 class="carrossel__titulo">Novos lançamentos</h2>
+        <h2 class="carrossel__titulo">Lançamentos</h2>
         <!-- Slider main container -->
         <div class="carrossel__container">
             <div class="swiper">
@@ -150,7 +150,7 @@
     </section>
 
     <section class="carrossel">
-        <h2 class="carrossel__titulo">Mais vendidos</h2>
+        <h2 class="carrossel__titulo">Mais assistidos</h2>
         <!-- Slider main container -->
         <div class="carrossel__container">
             <div class="swiper">
@@ -207,7 +207,7 @@
     </section>
 
     <section class="tópicos">
-        <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <h2 class="tópicos__titulo">Vistos recentemente</h2>
         <ul class="tópicos__lista">
             <li class="tópicos__item">
                 <a href="#" class="tópicos__link">Android</a>
@@ -239,7 +239,7 @@
     <section class="contato">
         <div class="contato__descrição">
             <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+            <p class="contato__texto"></p>
         </div>
         <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
     </section>
