--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-            <h1 class="container__titulo"><b class="container__titulo--negrito">Netflix</b></h1>
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Lobo Outlet</b></h1>
         </div>
 
         <ul class="opções">
@@ -51,24 +51,11 @@
 
             <ul class="lista-menu">
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Ação</a>
+                    <a href="#" class="lista-menu__link">Campo</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Aventura</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Suspense</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Comédia</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Romance</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Ficção Científica</a>
-                    <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Terror</a>
+                    <a href="#" class="lista-menu__link">Futsal</a>
+               
                 </li>
                 </li>
             </ul>
@@ -81,8 +68,8 @@
             <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"
                     class="container__imagem container__imagem-transparente"></a>
             <a href="#" class="container__link">
-                <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
-                <p class="container__texto">Minha lista</p>
+                <img src="img/Compras.png" alt="Carrinhos de compras" class="container__imagem">
+                <p class="container__texto">Carrinho</p>
             </a>
             <a href="#" class="container__link">
                 <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
@@ -91,12 +78,12 @@
         </div>
     </header>
     <section class="banner">
-        <h2 class="banner__titulo">Aproveite a Netflix!</h2>
+        <h2 class="banner__titulo">Aproveite a sua loja Lobo Outlet!</h2>
         <p class="banner__texto"></p>
         <input type="search" class="banner__pesquisa" placeholder=>
     </section>
     <section class="carrossel">
-        <h2 class="carrossel__titulo">Lançamentos</h2>
+        <h2 class="carrossel__titulo"></h2>
         <!-- Slider main container -->
         <div class="carrossel__container">
             <div class="swiper">
@@ -150,7 +137,7 @@
     </section>
 
     <section class="carrossel">
-        <h2 class="carrossel__titulo">Mais assistidos</h2>
+        <h2 class="carrossel__titulo">Futsal</h2>
         <!-- Slider main container -->
         <div class="carrossel__container">
             <div class="swiper">
@@ -207,31 +194,31 @@
     </section>
 
     <section class="tópicos">
-        <h2 class="tópicos__titulo">Vistos recentemente</h2>
+        <h2 class="tópicos__titulo">Marcas</h2>
         <ul class="tópicos__lista">
             <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Android</a>
+                <a href="#" class="tópicos__link">Nike</a>
             </li>
             <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Marketing Digital</a>
+                <a href="#" class="tópicos__link">Adidas</a>
             </li>
             <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Agile</a>
+                <a href="#" class="tópicos__link">Puma</a>
             </li>
             <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Startups</a>
+                <a href="#" class="tópicos__link">Umbro</a>
             </li>
             <li class="tópicos__item">
-                <a href="#" class="tópicos__link">HTML e CSS</a>
+                <a href="#" class="tópicos__link">Mizuno</a>
             </li>
             <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Python</a>
+                <a href="#" class="tópicos__link">Penalty</a>
             </li>
             <li class="tópicos__item">
-                <a href="#" class="tópicos__link">OO</a>
+                <a href="#" class="tópicos__link">Joma</a>
             </li>
             <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Java</a>
+                <a href="#" class="tópicos__link">Topper</a>
             </li>
         </ul>
     </section>
@@ -246,84 +233,7 @@
 
     <hr />
 
-    <footer class="rodapé">
-        <h2 class="rodapé__titulo">Grupo Alura</h2>
-        <ul class="lista-rodapé">
-            <li class="lista-rodapé__titulo">Educação</li>
-            <li class="lista-rodapé__item">
-                <img src="img/CasaDoCodigo.svg" alt="Logo da casa do código">
-                <a href="#" class="lista-rodapé__link">Casa do código</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/Caelum.svg" alt="Logo da caelum">
-                <a href="#" class="lista-rodapé__link">Caelum</a>
-            </li>
-        </ul>
-
-        <ul class="lista-rodapé">
-            <li class="lista-rodapé__titulo">Educação online</li>
-            <li class="lista-rodapé__item">
-                <img src="img/Alura.svg" alt="Logo da Alura">
-                <a href="#" class="lista-rodapé__link">Alura</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/AluraEmpresas.svg" alt="Logo da Alura para Empresas">
-                <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/AluraLATAM.svg" alt="Logo da Alura Latam">
-                <a href="#" class="lista-rodapé__link">Alura LATAM</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/AluraStart.svg" alt="Logo da Alura START">
-                <a href="#" class="lista-rodapé__link">Alura Start</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/MusicDot.svg" alt="Logo da Music Dot">
-                <a href="#" class="lista-rodapé__link">Music Dot</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/AluraLingua.svg" alt="Logo da Alura Lingua">
-                <a href="#" class="lista-rodapé__link">Alura Lingua</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/PM3.svg" alt="Logo da PM3">
-                <a href="#" class="lista-rodapé__link">PM3</a>
-            </li>
-        </ul>
-
-        <ul class="lista-rodapé">
-            <li class="lista-rodapé__titulo">Comunidade</li>
-            <li class="lista-rodapé__item">
-                <img src="img/HipstersTech.svg" alt="Logo do Hipsters ponto Tech">
-                <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/ScubaDev.svg" alt="Logo do Scuba Dev">
-                <a href="#" class="lista-rodapé__link">Scuba Dev</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/LayersTech.svg" alt="Logo do Layers ponto Tech">
-                <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/LikeABoss.svg" alt="Logo do Like a Boss">
-                <a href="#" class="lista-rodapé__link">Like a Boss</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/CarreiraSemFronteira.svg" alt="Logo do Carreira sem fronteiras">
-                <a href="#" class="lista-rodapé__link">Carreira sem fronteiras</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/HipstersJobs.svg" alt="Logo do Hipsters ponto jobs">
-                <a href="#" class="lista-rodapé__link">Hipsters ponto jobs</a>
-            </li>
-            <li class="lista-rodapé__item">
-                <img src="img/GUJ.svg" alt="Logo do GUJ">
-                <a href="#" class="lista-rodapé__link">GUJ</a>
-            </li>
-        </ul>
-    </footer>
+   
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
